
* The support for the *embedded* version of Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v1.7.1]]
== 1.7.1 (05.09.2020)

icon:plus[] Internal: The internal code has been refactored and cleaned up.

icon:plus[] Plugins: The default plugin timeout has been increased from 15 seconds to two minutes.

icon:check[] Core: Fixed a bug that which prevented to update a node reference of a user if the user already had one set. link:https://github.com/gentics/mesh/issues/1114[#1114]

icon:check[] Core: Fixed a bug which caused a `NullPointerException` when loading the content for which the last editor has been deleted. link:https://github.com/gentics/mesh/issues/1117[#1117]

[[v1.7.0]]
== 1.7.0 (07.08.2020)

CAUTION: Java 10: This version of Gentics Mesh will only be executable using Java 10 or newer JVM versions.
		The Java APIs for `mesh-api`, `mesh-rest-model`, `mesh-rest-client` and `mesh-test-common` are still be usable with Java 8.
    Plugins need to be upgraded to Java 10 in order to be compatible with this version.
		
icon:plus[] Internal: The maven package structure for internal code has been changed.

icon:plus[] Internal: The internal code has been cleaned up.

[[v1.6.0]]
== 1.6.0 (05.08.2020)

CAUTION: GraphQL: Various issues with the permission handling in GraphQL have been addressed. Please note that this change may affect your GraphQL query results. It is thus advised to check whether your query returns the data you need with the current set of active permissions. Details on the behaviour of the permission system can be found in the link:{{< relref "graphql.asciidoc" >}}#permissions[graphql documentation].

icon:plus[] GraphQL: Permission errors will now also contain information about the location of the error within the query.
