@@ -31,6 +31,7 @@ import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -38,6 +39,7 @@ import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
 
 import com.gentics.madl.index.IndexHandler;
 import com.gentics.madl.type.TypeHandler;
@@ -230,35 +232,36 @@ public class NodeGraphFieldContainerImpl extends AbstractGraphFieldContainerImpl
 	}
 
 	@Override
-	public Set<String> getUrlFieldValues() {
+	public Stream<String> getUrlFieldValues() {
 		SchemaVersionModel schema = getSchemaContainerVersion().getSchema();
 
-		Set<String> urlFieldValues = new HashSet<>();
-		if (schema.getUrlFields() != null) {
-			for (String urlField : schema.getUrlFields()) {
-				FieldSchema fieldSchema = schema.getField(urlField);
-				GraphField field = getField(fieldSchema);
-				if (field instanceof StringGraphFieldImpl) {
-					StringGraphFieldImpl stringField = (StringGraphFieldImpl) field;
-					String value = stringField.getString();
-					if (value != null) {
-						urlFieldValues.add(value);
-					}
-				}
-				if (field instanceof StringGraphFieldListImpl) {
-					StringGraphFieldListImpl stringListField = (StringGraphFieldListImpl) field;
-					for (StringGraphField listField : stringListField.getList()) {
-						if (listField != null) {
-							String value = listField.getString();
-							if (value != null) {
-								urlFieldValues.add(value);
-							}
-						}
-					}
+		List<String> urlFields = schema.getUrlFields();
+		if (urlFields == null) {
+			return Stream.empty();
+		}
+		return urlFields.stream().flatMap(urlField -> {
+			FieldSchema fieldSchema = schema.getField(urlField);
+			GraphField field = getField(fieldSchema);
+			if (field instanceof StringGraphFieldImpl) {
+				StringGraphFieldImpl stringField = (StringGraphFieldImpl) field;
+				String value = stringField.getString();
+				if (StringUtils.isBlank(value)) {
+					return Stream.empty();
+				} else {
+					return Stream.of(value);
 				}
 			}
-		}
-		return urlFieldValues;
+			if (field instanceof StringGraphFieldListImpl) {
+				StringGraphFieldListImpl stringListField = (StringGraphFieldListImpl) field;
+				return stringListField.getList().stream()
+					.flatMap(listField -> Optional.ofNullable(listField)
+						.map(StringGraphField::getString)
+						.filter(StringUtils::isNotBlank)
+						.stream());
+			}
+
+			return Stream.empty();
+		});
 	}
 
 	/**
@@ -285,7 +288,7 @@ public class NodeGraphFieldContainerImpl extends AbstractGraphFieldContainerImpl
 					// We know that the found container already occupies the index with one of the given paths. Lets compare both sets of paths in order to
 					// determine
 					// which path caused the conflict.
-					Set<String> fromConflictingContainer = conflictingContainer.getUrlFieldValues();
+					Set<String> fromConflictingContainer = conflictingContainer.getUrlFieldValues().collect(Collectors.toSet());
 					@SuppressWarnings("unchecked")
 					Collection<String> conflictingValues = CollectionUtils.intersection(fromConflictingContainer, urlFieldValues);
 					String paths = conflictingValues.stream().map(n -> n.toString()).collect(Collectors.joining(","));
@@ -304,7 +307,7 @@ public class NodeGraphFieldContainerImpl extends AbstractGraphFieldContainerImpl
 
 	@Override
 	public void updateWebrootPathInfo(InternalActionContext ac, String branchUuid, String conflictI18n) {
-		Set<String> urlFieldValues = getUrlFieldValues();
+		Set<String> urlFieldValues = getUrlFieldValues().collect(Collectors.toSet());
 		Iterator<? extends GraphFieldContainerEdge> it = getContainerEdge(DRAFT, branchUuid);
 		if (it.hasNext()) {
 			GraphFieldContainerEdge draftEdge = it.next();
