@@ -9,6 +9,7 @@ import static com.gentics.mesh.core.rest.job.JobStatus.RUNNING;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 import javax.inject.Provider;
@@ -143,7 +144,7 @@ public class BranchMigrationImpl extends AbstractMigrationHandler implements Bra
 					} else {
 						draftEdge.setSegmentInfo(null);
 					}
-					draftEdge.setUrlFieldInfo(container.getUrlFieldValues());
+					draftEdge.setUrlFieldInfo(container.getUrlFieldValues().collect(Collectors.toSet()));
 					batch.add(container.onUpdated(newBranch.getUuid(), DRAFT));
 				});
 
@@ -163,7 +164,7 @@ public class BranchMigrationImpl extends AbstractMigrationHandler implements Bra
 					} else {
 						publishEdge.setSegmentInfo(null);
 					}
-					publishEdge.setUrlFieldInfo(container.getUrlFieldValues());
+					publishEdge.setUrlFieldInfo(container.getUrlFieldValues().collect(Collectors.toSet()));
 					batch.add(container.onUpdated(newBranch.getUuid(), PUBLISHED));
 				});
 
